--- a/cube_shuffle-wasm/index.html
+++ b/cube_shuffle-wasm/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<link data-trunk rel="sass" href="./bulma/bulma.sass"/>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link data-trunk rel="sass" href="./bulma/bulma.sass"/>
 </head>
 <body>
 
