Tweak colors to be darker.

--- a/cube_shuffle-wasm/index.html
+++ b/cube_shuffle-wasm/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="has-background-grey-light">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link data-trunk rel="sass" href="./bulma/bulma.sass"/>
