Set overflow-x to hidden.

--- a/cube_shuffle-wasm/index.html
+++ b/cube_shuffle-wasm/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link data-trunk rel="sass" href="./bulma/bulma.sass"/>
+    <style>
+        body {
+            overflow-x: hidden;
+        }
+    </style>
 </head>
 <body>
 
