Use bulma-tooltip

--- a/cube_shuffle-wasm/index.html
+++ b/cube_shuffle-wasm/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="has-background-grey-light">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link data-trunk rel="sass" href="./bulma/bulma.sass"/>
+    <link data-trunk rel="sass" href="./style.sass"/>
     <style>
         body {
             overflow-x: hidden;
