--- a/cube_shuffle-wasm/index.html
+++ b/cube_shuffle-wasm/index.html
@@ -5,7 +5,7 @@
     <link data-trunk rel="sass" href="./style.sass"/>
     <style>
         body {
-            overflow-x: clip;
+            overflow-x: hidden;
         }
     </style>
 </head>
